crates/symbolicator-js/tests/integration/snapshots/integration__sourcemap__invalid_lineno.snap
---
source: crates/symbolicator-js/tests/integration/sourcemap.rs
assertion_line: 397
expression: response
---
stacktraces:
  - frames:
      - filename: test.js
        abs_path: http//example.com/test.min.js
        data:
          symbolicated: false
raw_stacktraces:
  - frames:
      - filename: test.js
        abs_path: http//example.com/test.min.js
        data:
          symbolicated: false
errors:
  - abs_path: http//example.com/test.min.js
    type: invalid_location
    line: 0
    col: ~
