crates/symbolicator-js/tests/integration/snapshots/integration__sourcemap__invalid_location.snap
---
source: crates/symbolicator-js/tests/integration/sourcemap.rs
expression: response
---
stacktraces:
  - frames:
      - function: e
        filename: invalidlocation.js
        abs_path: "http://example.com/invalidlocation.js"
        lineno: 0
        colno: 0
raw_stacktraces:
  - frames:
      - function: e
        filename: invalidlocation.js
        abs_path: "http://example.com/invalidlocation.js"
        lineno: 0
        colno: 0
errors:
  - abs_path: "http://example.com/invalidlocation.js"
    type: invalid_location
    line: 0
    col: 0

