crates/symbolicator-js/tests/integration/snapshots/integration__sourcemap__malformed_abs_path.snap
---
source: crates/symbolicator-js/tests/integration/sourcemap.rs
expression: response
---
stacktraces:
  - frames:
      - filename: test.js
        abs_path: http//example.com/test.min.js
        lineno: 1
        colno: 1
raw_stacktraces:
  - frames:
      - filename: test.js
        abs_path: http//example.com/test.min.js
        lineno: 1
        colno: 1
errors:
  - abs_path: http//example.com/test.min.js
    type: missing_source

