crates/symbolicator-js/tests/integration/snapshots/integration__sourcemap__sources_budget_exceeded_by_minified_source.snap
---
source: crates/symbolicator-js/tests/integration/sourcemap.rs
expression: response
---
stacktraces:
  - frames:
      - function: i
        filename: test.min.js
        abs_path: "http://example.com/test.min.js"
        lineno: 1
        colno: 183
        data:
          symbolicated: false
raw_stacktraces:
  - frames:
      - function: i
        filename: test.min.js
        abs_path: "http://example.com/test.min.js"
        lineno: 1
        colno: 183
        data:
          symbolicated: false
errors:
  - abs_path: "http://example.com/test.min.js"
    type: missing_source
scraping_attempts:
  - url: "http://example.com/test.min.js"
    status: not_attempted
  - url: "http://example.com/test.min.js.map"
    status: not_attempted
